Created DFS solution & modifed printGrid
I created the DFS since I was able to use some of the mazeGeneration code for it. I also modified your printGrid method so it can also print the solutions to the DFS and BFS without new methods [Thanks]. Did some minor restructuring trying to make things flow better/modularized and some test methods. Not sure if I set up the DFS in the correct order...I used right, down, left, up. It would be easy to change if we need. I did not find the shortest path yet. Please generate the BFS next.